[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexpress"
version = "0.0.1"
authors = [
  { name="Italo Alfaro", email="akumiqt@gmail.com" },
]
description = "Bringing Express.js to Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/akuqt/pyexpress"
"Bug Tracker" = "https://github.com/akuqt/pyexpress/issues"